force-app/main/default/objects/nFORCE__Group__c/fields/nFORCE__Category__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Category__c</fullName>
    <description>Use this picklist field to indicate the category to which the group belongs. The picklist values describe different types of workflows.</description>
    <inlineHelpText>Indicate the category to which this group belongs.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Dashboard</fullName>
            </value>
            <value>
                <fullName>Online Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>