force-app/main/default/objects/nFORCE__Group__c/fields/nFORCE__Default_Collapse_Parent_Navigation__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Default_Collapse_Parent_Navigation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this field will collapse the parent navigation menu. This field will be off by default.</description>
    <label>Default Collapse Parent Navigation</label>
    <type>Checkbox</type>
</CustomField>