force-app/main/default/objects/nFORCE__Group__c/fields/nFORCE__Is_Archived__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually populated. When enabled, It allows a questionnaire group to no longer be in use while retaining the questionnaire data. When disabled, the questionnaire group remains active. By default, this is disabled.</description>
    <label>Is Archived</label>
    <type>Checkbox</type>
</CustomField>