force-app/main/default/objects/nFORCE__Group__c/fields/nFORCE__Is_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Questionnaire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually populated. When enabled, it identifes a group as a questionnaire group rather than a standard UI group. When disabled, a gorup is not identified as a questionnaire. This field is disabled by default.</description>
    <label>Is Questionnaire</label>
    <type>Checkbox</type>
</CustomField>