force-app/main/default/objects/nFORCE__Group__c/fields/nFORCE__Layout__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Layout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use this lookup field to select the layout for the group.</description>
    <inlineHelpText>Select a layout for this group.</inlineHelpText>
    <label>Layout</label>
    <referenceTo>nFORCE__Layout__c</referenceTo>
    <relationshipLabel>Groups</relationshipLabel>
    <relationshipName>Groups</relationshipName>
    <type>Lookup</type>
</CustomField>