force-app/main/default/objects/nFORCE__Group__c/fields/nFORCE__Parent_Group__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Parent_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Establishes a relationship to another Group, allowing for a hierarchical connection between a base Group and its Sub-Groups.</description>
    <inlineHelpText>The name of the Group that this group is a Sub-Group of.</inlineHelpText>
    <label>Parent Group</label>
    <referenceTo>nFORCE__Group__c</referenceTo>
    <relationshipLabel>Parent Group</relationshipLabel>
    <relationshipName>Parent_Group</relationshipName>
    <type>Lookup</type>
</CustomField>