force-app/main/default/objects/nFORCE__Group__c/listViews/nFORCE__All.listView-meta.xml
<ListView>
    <fullName>nFORCE__All</fullName>
    <columns>NAME</columns>
    <columns>nFORCE__App__c</columns>
    <columns>nFORCE__lookupKey__c</columns>
    <columns>nFORCE__Screen__c</columns>
    <columns>nFORCE__Is_Questionnaire__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>